--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout code
         uses: actions/checkout@v2
+        
       # Login to Azure using secret
       - name: Azure Login
         uses: Azure/login@v1
@@ -30,26 +31,9 @@ jobs:
           # Paste output of `az ad sp create-for-rbac` as value of secret variable: AZURE_CREDENTIALS
           creds: ${{ secrets.AZURE_CREDENTIALS }}
       # Read Security Rules from JSON file
-      - name: Read NSG JSON rules
-        id: output
-        run: |
-          $file_text = Get-Content "rules.json"
-          echo "::set-output name=new_value::$file_text"
+
       - name: Run Script
         id: script
         run: |
-          cat ./rules.json
-      # Runs a single command using the runners shell
-      - name: Deploy Azure Resource Manager (ARM) Template
-        uses: Azure/arm-deploy@v1
-        with:
-          # Provide the scope of the deployment. Valid values are: 'resourcegroup', 'managementgroup', 'subscription'
-          scope: resourcegroup
-          # Override the Subscription Id set by Azure Login.
-          subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
-          # Provide the name of a resource group, only required for resource Group deployments.
-          resourceGroupName: testNSG
-          # Specify the path or URL to the Azure Resource Manager template.
-          template: ./azuredeploy.json
-          # Supply deployment parameter values.
-          parameters: NSGs=test
+          az deployment group create -n deploy$(Get-Random) -g testNSG --template-file .\azuredeploy.json --parameters NSGs=@rules.json
+
