--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,9 +17,8 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
-- script: 
+- powershell:  
     $rules = Get-Content rules.json
-- script: |
     echo "##vso[task.setvariable variable=rulesvar]$rules"
 - task: AzureResourceManagerTemplateDeployment@3
   inputs:
